# narrex

./: .env.example  CLAUDE.md  docker-compose.yml  justfile
apps/api/crates/llm/: Cargo.toml
apps/api/crates/llm/src/: cf_workers.rs  gateway.rs  gemini.rs  lib.rs  provider.rs
docs/: database-design-ko.md  database-design.md  design-doc-ko.md  design-doc.md  erd.mermaid  prd-ko.md  prd-phase-1-ko.md  prd-phase-1.md  prd-settings.md  prd.md  product-brief-guest-mode.md  product-brief-sample-project.md  product-brief.md  ux-design.md  (+8 more)
services/api/: Cargo.toml
services/api/src/: config.rs  main.rs
services/api/src/domain/: mod.rs
services/api/src/domain/ai/: error.rs  models.rs  ports.rs  prompt.rs  service.rs
services/api/src/domain/auth/: error.rs  models.rs  ports.rs  service.rs
services/api/src/domain/character/: error.rs  models.rs  service.rs
services/api/src/domain/project/: error.rs  models.rs  service.rs
services/api/src/domain/timeline/: error.rs  models.rs  ports.rs  service.rs
services/api/src/inbound/http/: error.rs  health.rs  mod.rs  server.rs
services/api/src/inbound/http/ai/: handlers.rs  request.rs  response.rs
services/api/src/inbound/http/auth/: handlers.rs  request.rs  response.rs
services/api/src/inbound/http/middleware/: auth.rs
services/api/src/inbound/http/project/: handlers.rs  request.rs  response.rs
services/api/src/inbound/http/timeline/: response.rs
services/api/src/outbound/: jwt.rs  mod.rs
services/api/src/outbound/postgres/: character.rs  context.rs  draft.rs  generation_log.rs  mod.rs  project.rs  scene.rs  user.rs
(+270 files in other folders)
